// Copyright Offene Werkstatt WÃ¤denswil
// SPDX-License-Identifier: MIT

syntax = "proto3";

package maco.proto.firebase_rpc;

import "common.proto";

// Reason for usage checkout
message CheckOutReason {
  oneof reason {
    // Checked out via UI
    ReasonUi ui = 1;
    // Another tag/user checked in on the same terminal
    ReasonCheckInOtherTag other_tag = 2;
    // User checked in on another machine
    ReasonCheckInOtherMachine other_machine = 3;
    // Session timed out
    ReasonTimeout timeout = 4;
    // User used self-checkout
    ReasonSelfCheckout self_checkout = 5;
  }
}

message ReasonUi {}

message ReasonCheckInOtherTag {
  maco.proto.TagUid token_id = 1;
  maco.proto.FirebaseId user_id = 2;
}

message ReasonCheckInOtherMachine {
  maco.proto.FirebaseId machine_id = 1;
}

message ReasonTimeout {}

message ReasonSelfCheckout {}

// Single machine usage record
message MachineUsage {
  // Firebase user ID
  maco.proto.FirebaseId user_id = 1;
  // Authentication ID used for this usage
  maco.proto.FirebaseId authentication_id = 2;
  // Check-in timestamp (unix timestamp)
  int64 check_in = 3;
  // Check-out timestamp (unix timestamp), 0 if still active
  int64 check_out = 4;
  // Reason for checkout
  CheckOutReason reason = 5;
}

// Collection of usage records for a machine
message MachineUsageHistory {
  // Firebase machine ID
  maco.proto.FirebaseId machine_id = 1;
  // Usage records to upload (uses callback since repeated messages can't have max_count)
  repeated MachineUsage records = 2;
}

// UploadUsage RPC - uploads machine usage history to Firebase
message UploadUsageRequest {
  MachineUsageHistory history = 1;
}

message UploadUsageResponse {
  bool success = 1;
}
